# notehb

./: pyproject.toml
notehb/: .main.py.swp  core.py  main.py
