[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notehb"
version = "0.1.0"
description = "."
authors = [
    {name = "Aranhb06", email = "Aranhb06@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"

# Dependencias obligatorias (lo que el usuario necesita para ejecutar tu app)
dependencies = [
    "typer[all]", # La dependencia del CLI
    "textual",    # La dependencia de la interfaz TUI
    "pydantic",   # (Opcional) si usas esto para tus modelos de Tarea/Lista
]

[project.scripts]
notehb = 
